--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,10 +29,39 @@ services:
     ports:
       - "5433:5432"
 
+  postgres-registry:
+    image: postgres:16
+    environment:
+      POSTGRES_DB: registry
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: pass
+    ports:
+      - "5434:5432"
+
   generator-service:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - SERVICE_NAME=generator-service
     ports:
       - "8080:8888"
+    environment:
+      - SERVER_PORT=8888
     depends_on:
       - kafka
       - postgres-generator
+
+  registry-service:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - SERVICE_NAME=registry-service
+    ports:
+      - "8081:8889"
+    environment:
+      - SERVER_PORT=8889
+    depends_on:
+      - kafka
+      - postgres-registry
