--- a/registry-service/pom.xml
+++ b/registry-service/pom.xml
@@ -11,7 +11,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>generator-service</artifactId>
+    <artifactId>registry-service</artifactId>
 
     <properties>
         <java.version>21</java.version>
