fix(push-events): add spring-batch

--- a/registry-service/src/main/resources/application.yaml
+++ b/registry-service/src/main/resources/application.yaml
@@ -21,5 +21,15 @@ spring:
       events-created: events.created
       events-confirmed: events.confirmed
 
+  batch:
+    jdbc:
+      initialize-schema: always
+    job:
+      enabled: false
+
   server:
     port: 8889
+
+batch:
+  processing:
+    delay: 10000
