--- a/registry-service/pom.xml
+++ b/registry-service/pom.xml
@@ -56,6 +56,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.batch</groupId>
+            <artifactId>spring-batch-core</artifactId>
+            <version>6.0.0-M1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
